# Lightborne

./: .gitignore  Cargo.toml  Lightborne_example.toml
.github/workflows/: rustdoc.yaml
assets/: bob.aseprite  lightborne.ldtk
assets/levels/: arthur-wang.ldtk  david-tran.ldtk  lightborne.ldtk  raymond-b.ldtk  raymond-bian.ldtk  roderic-parson.ldtk
assets/levels/unused/: david-tran.ldtk  raymond-bian.ldtk  roderic-parson.ldtk
assets/shaders/: background.wgsl  blur.wgsl  combine_frames.wgsl  foreground.wgsl  frame_mask.wgsl  gradient_circle.wgsl  light.wgsl  utils.wgsl
resources/: contributing.md  project-setup.md
resources/level-design/: design-tools.md  index.md  ldtk.md
resources/programming/: external-resources.md  index.md  learning-rust.md  lightborne-structure.md  lightborne-style.md  why-bevy-rust.md
src/: config.rs  main.rs  pause.rs  shared.rs
src/camera/: mod.rs
src/debug/: mod.rs
src/input/: mod.rs
src/level/: activatable.rs  button.rs  crystal.rs  door.rs  entity.rs  interactable.rs  misc.rs  mod.rs  setup.rs  setup_example.rs  walls.rs
src/light/: mod.rs  render.rs  segments.rs  sensor.rs  shoot.rs
src/lighting/: light.rs  material.rs  mod.rs  occluder.rs  render.rs
src/player/: kill.rs  light.rs  match_player.rs  mod.rs  movement.rs  spawn.rs  strand.rs
